--- a/JobsManagement/JobsManagement.csproj
+++ b/JobsManagement/JobsManagement.csproj
@@ -81,6 +81,9 @@
     <Compile Include="thongke.Designer.cs">
       <DependentUpon>thongke.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="home.resx">
+      <DependentUpon>home.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="login.resx">
       <DependentUpon>login.cs</DependentUpon>
     </EmbeddedResource>
